# Callie

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  vcpkg.json
doc/: 3DViewer.odp  CieleProjektu_FilipGres.odt  Class Structure.drawio
examples/: bishop.mtl
res/shaders/: FragmentShader.shader  VertexShader.shader
src/: app.cpp  clpch.h
src/Core/: Application.cpp  Application.h  Base.h  Camera.cpp  Camera.h  EntryPoint.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Line.cpp  Line.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  PlatformDetection.h  PropertyPanel.cpp  PropertyPanel.h  RenderLayer.cpp  RenderLayer.h  SceneView.cpp  SceneView.h  Window.cpp  Window.h  config.h.in
src/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
src/Graphics/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UIRenderer.cpp  UIRenderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  test.cpp
src/ImGui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  imgui.cpp
src/ImGui/Plugins/: ImFileBrowser.h
src/Log/: Logger.cpp  Logger.h
src/Window/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h  Window.cpp  Window.h
